@@ -10,6 +10,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 ***   In --xml-only show the original unmodified names, and add module_files
       and cells similar to Verilog-Perl, msg2719. [Kanad Kanhere]
 
+****  Add CONTASSREG error on continuous assignments to regs, bug1369. [Peter Gerst]
+
 ****  Add PROCASSWIRE error on behavioral assignments to wires, msg2737. [Neil Turton]
 
 ****  Add IMPORTSTAR warning on import::* inside $unit scope.
